--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -12,3 +12,39 @@
 }
 
 
+
+@article{asparouhovAuxiliaryVariablesMixture2014,
+  title = {Auxiliary {{Variables}} in {{Mixture Modeling}}: {{Three}}-{{Step Approaches Using Mplus}}},
+  shorttitle = {Auxiliary {{Variables}} in {{Mixture Modeling}}},
+  author = {Asparouhov, Tihomir and Muthén, Bengt},
+  date = {2014-07-03},
+  journaltitle = {Structural Equation Modeling: A Multidisciplinary Journal},
+  volume = {21},
+  pages = {329--341},
+  issn = {1070-5511},
+  doi = {10.1080/10705511.2014.915181},
+  url = {http://dx.doi.org/10.1080/10705511.2014.915181},
+  urldate = {2017-02-09},
+  abstract = {This article discusses alternatives to single-step mixture modeling. A 3-step method for latent class predictor variables is studied in several different settings, including latent class analysis, latent transition analysis, and growth mixture modeling. It is explored under violations of its assumptions such as with direct effects from predictors to latent class indicators. The 3-step method is also considered for distal variables. The Lanza, Tan, and Bray (2013) method for distal variables is studied under several conditions including violations of its assumptions. Standard errors are also developed for the Lanza method because these were not given in Lanza et al. (2013).},
+  file = {C\:\\Users\\lissa102\\Zotero\\storage\\7QRZ7B8S\\Asparouhov_Muthén_2014_Auxiliary Variables in Mixture Modeling.pdf;C\:\\Users\\lissa102\\Zotero\\storage\\766WM8QW\\10705511.2014.html},
+  keywords = {3-step estimation,distal outcomes,latent class predictors,mixture modeling,Mplus},
+  number = {3}
+}
+
+
+@article{jungIntroductionLatentClass2008,
+  title = {An {{Introduction}} to {{Latent Class Growth Analysis}} and {{Growth Mixture Modeling}}},
+  author = {Jung, Tony and Wickrama, K. A. S.},
+  date = {2008},
+  journaltitle = {Social and Personality Psychology Compass},
+  volume = {2},
+  pages = {302--317},
+  issn = {1751-9004},
+  doi = {10.1111/j.1751-9004.2007.00054.x},
+  url = {http://doi.wiley.com/10.1111/j.1751-9004.2007.00054.x},
+  number = {1}
+}
+
+
+
+
