--- a/Exported Items.bib
+++ b/Exported Items.bib
@@ -1,15 +1,14 @@
 
-@article{jungIntroductionLatentClass2008,
-  title = {An {{Introduction}} to {{Latent Class Growth Analysis}} and {{Growth Mixture Modeling}}},
-  author = {Jung, Tony and Wickrama, K. A. S.},
-  date = {2008},
-  journaltitle = {Social and Personality Psychology Compass},
-  volume = {2},
-  pages = {302--317},
-  issn = {1751-9004},
-  doi = {10.1111/j.1751-9004.2007.00054.x},
-  url = {http://doi.wiley.com/10.1111/j.1751-9004.2007.00054.x},
-  number = {1}
+@article{muthenCategorizingSkewedLimited1983,
+  title = {Categorizing Skewed, Limited Dependent Variables Using Multivariate Probit Regression to Evaluate the {{California Civil Addict Program}}},
+  author = {Muthén, Bengt O. and Speckart, George},
+  date = {1983},
+  journaltitle = {Evaluation Review},
+  volume = {7},
+  pages = {257--269},
+  abstract = {Probit analysis is applied in a situation where analysis of covariance (ANCOVA) would customarily be used. The dichotomous dependent variables arise from dichotomizations of skewed continuous variables recorded as the proportion of time certain activities are observed. The probit approach avoids the biases of ordinary A NCO VA that arise due to skewness (limited variation). To illustrate this, data from 225 experiments and 214 control subjects in a drug treatment program was analyzed. It was found that the probit approach was able to reveal more substantial treatment effects than the ordinary A NCO VA. 1.},
+  file = {C\:\\Users\\lissa102\\Zotero\\storage\\SWT6EKIW\\N and Speckart - CATEGORIZING SKEWED, LIMITED DEPENDENT VARIABLES U.pdf;C\:\\Users\\lissa102\\Zotero\\storage\\C6GYDWPQ\\summary.html},
+  number = {2}
 }
 
 
